--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -5,16 +5,16 @@
         width: 90%;
     }
 
-    thead > tr > th:nth-child(2)::after {
+/*     thead > tr > th:nth-child(2)::after {
         content: ' 📙';
     }
 
     thead > tr > th:nth-child(3)::after {
         content: ' 📖';
-    }
+    } */
 }
 
-@media (min-width: 769px) {
+/* @media (min-width: 769px) {
     thead > tr > th:nth-child(2)::before {
         content: '📙 ';
     }
@@ -22,4 +22,4 @@
     thead > tr > th:nth-child(3)::before {
         content: '📖 ';
     }
-}
+} */
