--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,21 @@
 @charset "UTF-8";
 
+/*@font-face {
+    font-family: 'dung';
+    src: url('../fontes/DUNGRG__.TTF') format('truetype');
+}*/
+
+
+  /*@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Khojki:wght@700&display=swap');*/
+
+
+/*:root {
+    --fonteRodape: 'dung';
+}*/
+
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -24,6 +38,10 @@ tbody > tr:nth-child(odd) {
 tbody > tr:nth-child(even) {
     background-color: white;
 }
+
+.corFundoBible {
+    background-color: rgb(247, 247, 208);
+}
  
 caption {
     background-color: yellow;
@@ -33,19 +51,73 @@ caption {
     font-weight: 900;
 }
 
+sub {
+    display: block;
+    margin: 20px 60px;
+    text-align: justify;
+    text-indent: 0px;
+}
+
+span {
+    /*display: block;
+    float: right;
+    margin-top: 60px;
+    font-size: 42px;
+    font-weight: 700;
+    font-family: 'dung';*/   
+}
+
 td, th {
     border: solid 3px black;
     height: 40px;
+    /*background-color: rgba(245, 245, 182, 0.562);*/
 }
 
 th {
     background-color: white;
+    transition: .5s;
+}
+
+th:nth-child(1):hover {
+    cursor: pointer;
+    background-color: #009dff;
+    color: white; 
+    letter-spacing: 5px;
+    /*text-shadow: 2px 2px 10px blue;*/
+    /*text-decoration: underline; */
+}
+
+.cic {
+    color: white; 
+    background-color: rgba(0, 0, 0, 0.61);
+    border-bottom: olid 3px white;
+}
+
+th:nth-child(2) {
+    transition: 0.5s;
 }
 
 td {
     text-align: center;
 }
 
+.ajustesCic {
+    padding: 20px;
+    text-align: justify;
+    text-indent: 50px;
+}
+
 td:nth-child(2) {
     font-weight: 900;
+    transition: .3s;
+}
+
+td:nth-child(2):hover {
+    cursor: pointer;
+    text-decoration: underline;   
+}
+
+td:nth-child(3):hover {
+    cursor: pointer;
+    text-decoration: underline;   
 }
