--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -9,6 +9,10 @@
         padding: 5px;
     }
 
+    sub {
+        margin: 20px 30px;
+    }
+
 /*     thead > tr > th:nth-child(2)::after {
         content: ' 📙';
     }
