--- a/estilos/style.css
+++ b/estilos/style.css
@@ -71,6 +71,10 @@ th:nth-child(1):hover {
     letter-spacing: 5px;
 }
 
+th:nth-child(1):active {
+    text-decoration: underline;
+}
+
 .cic {
     color: white; 
     background-color: rgba(0, 0, 0, 0.61);
