--- a/estilos/style.css
+++ b/estilos/style.css
@@ -99,12 +99,8 @@ h1 {
     text-align: center;   
 }
 
-span {
-    display: inline-block;
-    margin-left: -110px;
-    font-size: 22px;
-    padding-right: 20px;
-    font-weight: 900; 
+h2 {
+    text-align: center;
 }
 
 p {
